<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vimalsagarji.vimalsagarjiapp.activity.mainactivity.ProfileActivity">

    <include layout="@layout/toolbar_home" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_pin" />

            <com.vimalsagarji.vimalsagarjiapp.utils.CustomTextViewBold
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Aacharya Vimalsagarsooriji"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                style="@style/profileHint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_fnm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:lines="1"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/profileHint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/profileHint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/mobile"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/profileHint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/round_rect_shapeoneselect"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
